fix: remove obsolete copy step from Docker workflow
Vite now outputs directly to internal/ui/static/, so the copy step
from ui/dist/ is no longer needed and was causing build failures.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,15 +37,10 @@ jobs:
         cd ui
         npm install
 
-    - name: Build UI
+    - name: Build UI (outputs directly to internal/ui/static)
       run: |
         cd ui
         npm run build
-
-    - name: Prepare UI assets for embedding
-      run: |
-        mkdir -p internal/ui/static
-        cp -r ui/dist/* internal/ui/static/
 
     - name: Build Station binary with embedded UI
       run: |
