--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: "1.21"
+        go-version: "1.24"
         cache: true
 
     - name: Install dependencies
@@ -49,7 +49,7 @@ jobs:
     - name: Run tests with coverage
       env:
         OPENAI_API_KEY: sk-test-dummy-key-for-ci
-      run: make test-coverage
+      run: go test -short -coverprofile=coverage.out ./...
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -67,7 +67,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: "1.21"
+        go-version: "1.24"
         cache: true
 
     - name: Build binary
@@ -85,7 +85,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: "1.21"
+        go-version: "1.24"
         cache: true
 
     - name: Install gosec
