test(ui): add Playwright e2e testing setup
- Add Playwright configuration with chromium browser
- Add e2e tests for workflows page (18 tests total)
- Add e2e tests for agents page and navigation
- Add npm scripts for running e2e tests
- Update .gitignore for Playwright artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,8 @@ ui/.env*
 ui/coverage/
 ui/.nyc_output/
 ui/build/
+ui/playwright-report/
+ui/test-results/
 
 # Documentation site
 docs/site/dist/
