docs: add E2E results, UI/UX issues, and data flow design to PRD
- Document E2E test results from 2025-12-24
  - foreach: COMPLETED (race condition fix verified)
  - parallel: COMPLETED (3 branches executed)
  - switch: FAILED (syntax issue, now fixed)

- Document UI/UX issues identified:
  - Execution steps view lacks agent info and data flow
  - Flow diagram doesn't show agents used
  - Definition view cannot scroll
  - No agent summary in definition

- Document critical data flow design requirement:
  - Task should be at trigger, not in definition
  - Data should flow between agents automatically
  - Current hardcoded agent_task is wrong pattern
  - Added implementation requirements for future phases

- Fix switch workflow syntax: use _value for scalar dataPath

--- a/examples/workflows/e2e-switch-routing.workflow.yaml
+++ b/examples/workflows/e2e-switch-routing.workflow.yaml
@@ -22,11 +22,11 @@ states:
     type: switch
     dataPath: alert.severity
     conditions:
-      - if: "val == 'critical'"
+      - if: "_value == 'critical'"
         next: critical_response
-      - if: "val == 'high'"
+      - if: "_value == 'high'"
         next: high_severity_response
-      - if: "val == 'medium'"
+      - if: "_value == 'medium'"
         next: medium_severity_response
     defaultNext: low_severity_response
 
