--- a/ui/package.json
+++ b/ui/package.json
@@ -28,11 +28,13 @@
     "@rjsf/validator-ajv8": "^5.24.13",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.90.1",
+    "@types/js-yaml": "^4.0.9",
     "@xyflow/react": "^12.8.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elkjs": "^0.10.2",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
