--- a/deployments/argo-workflows/workflow.yaml
+++ b/deployments/argo-workflows/workflow.yaml
@@ -1,10 +1,9 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
-  generateName: station-security-pipeline-
-  namespace: security
+  generateName: station-pipeline-
 spec:
-  entrypoint: security-pipeline
+  entrypoint: analysis-pipeline
   arguments:
     parameters:
     - name: repo-url
@@ -20,16 +19,26 @@ spec:
           storage: 1Gi
 
   templates:
-  - name: security-pipeline
+  - name: analysis-pipeline
     steps:
     - - name: checkout
         template: git-checkout
-    - - name: infrastructure-scan
-        template: infrastructure-security
-      - name: supply-chain-scan
-        template: supply-chain-security
-    - - name: deployment-gate
-        template: deployment-gate
+    - - name: code-review
+        template: run-agent
+        arguments:
+          parameters:
+          - name: agent
+            value: "Code Reviewer"
+          - name: task
+            value: "Review code for bugs and best practices"
+      - name: security-scan
+        template: run-agent
+        arguments:
+          parameters:
+          - name: agent
+            value: "Security Analyst"
+          - name: task
+            value: "Scan for security vulnerabilities"
 
   - name: git-checkout
     container:
@@ -41,55 +50,19 @@ spec:
       - name: workspace
         mountPath: /workspace
 
-  - name: infrastructure-security
+  - name: run-agent
+    inputs:
+      parameters:
+      - name: agent
+      - name: task
     container:
-      image: ghcr.io/cloudshipai/station-security:latest
+      image: ghcr.io/cloudshipai/station:latest
       command: [stn]
       args:
         - agent
         - run
-        - "Infrastructure Security Auditor"
-        - "Scan terraform, kubernetes, and docker configurations for security vulnerabilities and misconfigurations"
-      env:
-      - name: OPENAI_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: station-secrets
-            key: openai-api-key
-      - name: PROJECT_ROOT
-        value: /workspace
-      volumeMounts:
-      - name: workspace
-        mountPath: /workspace
-
-  - name: supply-chain-security
-    container:
-      image: ghcr.io/cloudshipai/station-security:latest
-      command: [stn]
-      args:
-        - agent
-        - run
-        - "Supply Chain Guardian"
-        - "Generate SBOM and scan dependencies for known vulnerabilities"
-      env:
-      - name: OPENAI_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: station-secrets
-            key: openai-api-key
-      volumeMounts:
-      - name: workspace
-        mountPath: /workspace
-
-  - name: deployment-gate
-    container:
-      image: ghcr.io/cloudshipai/station-security:latest
-      command: [stn]
-      args:
-        - agent
-        - run
-        - "Deployment Security Gate"
-        - "Validate security posture and compliance requirements before deployment"
+        - "{{inputs.parameters.agent}}"
+        - "{{inputs.parameters.task}}"
       env:
       - name: OPENAI_API_KEY
         valueFrom:
