--- a/deployments/jenkins/Jenkinsfile
+++ b/deployments/jenkins/Jenkinsfile
@@ -1,18 +1,17 @@
 pipeline {
   agent {
     docker {
-      image 'ghcr.io/cloudshipai/station-security:latest'
-      args '-v /var/run/docker.sock:/var/run/docker.sock --privileged'
+      image 'ghcr.io/cloudshipai/station:latest'
+      args '-v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
 
   environment {
     OPENAI_API_KEY = credentials('openai-api-key')
-    PROJECT_ROOT = "${WORKSPACE}"
   }
 
   stages {
-    stage('Infrastructure Security') {
+    stage('Code Review') {
       when {
         anyOf {
           branch 'main'
@@ -20,45 +19,20 @@ pipeline {
         }
       }
       steps {
-        sh '''
-          stn agent run "Infrastructure Security Auditor" \
-            "Scan terraform, kubernetes, and docker configurations for security vulnerabilities and compliance violations"
-        '''
+        sh 'stn agent run "Code Reviewer" "Review code for bugs and best practices"'
       }
     }
 
-    stage('Supply Chain Security') {
+    stage('Security Scan') {
       steps {
-        sh '''
-          stn agent run "Supply Chain Guardian" \
-            "Generate SBOM and scan dependencies for known vulnerabilities and malicious packages"
-        '''
-      }
-    }
-
-    stage('Deployment Gate') {
-      when {
-        branch 'main'
-      }
-      steps {
-        input message: 'Security scan complete. Approve deployment?', ok: 'Deploy'
-        sh '''
-          stn agent run "Deployment Security Gate" \
-            "Validate security posture and compliance requirements before deployment"
-        '''
+        sh 'stn agent run "Security Analyst" "Scan for security vulnerabilities"'
       }
     }
   }
 
   post {
     always {
-      echo 'Station security scan completed'
-    }
-    success {
-      echo 'No critical security issues found'
-    }
-    failure {
-      echo 'Critical security issues detected - review logs'
+      echo 'Station analysis completed'
     }
   }
 }
