--- a/deployments/circleci/config.yml
+++ b/deployments/circleci/config.yml
@@ -1,59 +1,17 @@
 version: 2.1
 
 jobs:
-  infrastructure-security:
+  analyze:
     docker:
-      - image: ghcr.io/cloudshipai/station-security:latest
+      - image: ghcr.io/cloudshipai/station:latest
     steps:
       - checkout
       - run:
-          name: Infrastructure Security Scan
-          command: |
-            stn agent run "Infrastructure Security Auditor" \
-              "Scan terraform, kubernetes, and docker configurations for security vulnerabilities and compliance violations"
-
-  supply-chain-security:
-    docker:
-      - image: ghcr.io/cloudshipai/station-security:latest
-    steps:
-      - checkout
-      - run:
-          name: Supply Chain Security Scan
-          command: |
-            stn agent run "Supply Chain Guardian" \
-              "Generate SBOM and scan dependencies for known vulnerabilities and malicious packages"
-
-  deployment-gate:
-    docker:
-      - image: ghcr.io/cloudshipai/station-security:latest
-    steps:
-      - checkout
-      - run:
-          name: Deployment Security Gate
-          command: |
-            stn agent run "Deployment Security Gate" \
-              "Validate security posture and compliance requirements before deployment"
+          name: Run Agent
+          command: stn agent run "Code Reviewer" "Review the code for bugs and best practices"
 
 workflows:
-  version: 2
-  security-pipeline:
+  main:
     jobs:
-      - infrastructure-security:
-          context: station-security
-          filters:
-            branches:
-              only:
-                - main
-                - develop
-
-      - supply-chain-security:
-          context: station-security
-
-      - deployment-gate:
-          context: station-security
-          requires:
-            - infrastructure-security
-            - supply-chain-security
-          filters:
-            branches:
-              only: main
+      - analyze:
+          context: station
