--- a/internal/deployment/templates/fly.toml
+++ b/internal/deployment/templates/fly.toml
@@ -60,6 +60,11 @@ primary_region = "{{.FlyRegion}}"
   cpus = 1
   memory_mb = 1024
 
+# SQLite limitation: Only 1 machine allowed (each machine has its own DB)
+# This prevents Fly from creating multiple machines for HA
+[deploy]
+  strategy = "immediate"
+
 # Stateless deployment - database rebuilt from environment files on each deploy
 # For persistence, configure Litestream replication via environment variables
 
