feat(deploy): add Cloudflare Containers + Fly.io improvements (#89)
* feat(deploy): add Cloudflare Containers deployment target

Implement 'stn deploy --target cloudflare' for deploying Station environments to Cloudflare Containers platform.

Key features:
- Uses base Station image (ghcr.io/cloudshipai/station:latest)
- Bundle created from environment and auto-uploaded to CloudShip
- Container downloads bundle on startup via STN_BUNDLE_ID
- Configurable sleep-after duration (--sleep-after, --always-on)
- Configurable instance type (--instance-type: lite/basic/standard-1 to standard-4)
- Generates wrangler.toml and worker.js for deployment
- Sets secrets via wrangler CLI
- Supports --destroy flag for teardown

New flags:
- --target cloudflare (or cf, cloudflare-containers)
- --sleep-after <duration> (e.g., 10m, 1h, 24h)
- --always-on (sets sleep to 168h)
- --instance-type <type> (lite, basic, standard-1 to standard-4)
- --destroy (tear down deployment)

Files:
- templates/wrangler.toml: Cloudflare Containers config
- templates/cloudflare-worker.js: Worker script for container routing
- cloudship/client.go: UploadBundle() method for bundle sharing
- handlers/deploy.go: deployToCloudflare() implementation

* fix(deploy): add Dockerfile, package.json generation and npm install for Cloudflare

- Generate Dockerfile with base image reference (wrangler builds/pushes to CF registry)
- Generate package.json with @cloudflare/containers dependency
- Run npm install before wrangler deploy
- Fix test to expect './Dockerfile' instead of full image URL
- Simplify wrangler.toml and worker.js templates

* chore(deploy): mark Cloudflare Containers as experimental

- Add [EXPERIMENTAL] label to help text and target description
- Add warning about known disk size limit issues at deploy time

* feat(deploy): add --always-on support for Fly.io

- Add FlyAlwaysOn field to DeploymentConfig
- Update fly.toml template to set auto_stop_machines and min_machines_running based on always-on flag

--- a/internal/deployment/templates/fly.toml
+++ b/internal/deployment/templates/fly.toml
@@ -40,16 +40,16 @@ primary_region = "{{.FlyRegion}}"
 [http_service]
   internal_port = 8587
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = {{if .FlyAlwaysOn}}false{{else}}true{{end}}
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = {{if .FlyAlwaysOn}}1{{else}}0{{end}}
   processes = ["app"]
 
 # Management MCP TCP service (admin tools like add_agent, call_agent)  
 [[services]]
   protocol = "tcp"
   internal_port = {{.MCPPort}}
-  auto_stop_machines = true
+  auto_stop_machines = {{if .FlyAlwaysOn}}false{{else}}true{{end}}
   auto_start_machines = true
 
   [[services.ports]]
@@ -59,6 +59,11 @@ primary_region = "{{.FlyRegion}}"
   cpu_kind = "shared"
   cpus = 1
   memory_mb = 1024
+
+# SQLite limitation: Only 1 machine allowed (each machine has its own DB)
+# This prevents Fly from creating multiple machines for HA
+[deploy]
+  strategy = "immediate"
 
 # Stateless deployment - database rebuilt from environment files on each deploy
 # For persistence, configure Litestream replication via environment variables
